Added '.' prefix to build.sh paths

--- a/docker/nginx/html/index.html
+++ b/docker/nginx/html/index.html
@@ -21,7 +21,7 @@
       <details>This server is running <a href="https://www.nginx.com/">NGINX</a>. It is also acting as a proxy for the M3
         REST services. The source code for the NGINX docker build is located at
         <a
-          href="https://bitbucket.org/mbari/m3-deployspace/src/master/nginx/">https://bitbucket.org/mbari/m3-deployspace/src/master/nginx/</a>
+          href="https://github.com/mbari-media-management/m3-quickstart/tree/main/docker/nginx">m3-quickstart/docker/nginx</a>
       </details>
     </header>
   </section>
