--- a/docker/nginx/html/index.html
+++ b/docker/nginx/html/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 
@@ -18,89 +17,107 @@
     <img src="resources/images/logo-mbari-3b.png" alt="MBARI" />
     <header>
       <h1>Welcome to the MBARI Media Managment (M3) Server</h1>
-      <details>This server is running <a href="https://www.nginx.com/">NGINX</a>. It is also acting as a proxy for the M3
-        REST services. The source code for the NGINX docker build is located at
+      <details>This server is running <a href="https://www.nginx.com/">NGINX</a>. It is also acting as a proxy for the
+        REST services hosted on a number of MBARI servers. The source code for the NGINX docker build is located at
         <a
-          href="https://github.com/mbari-media-management/m3-quickstart/tree/main/docker/nginx">m3-quickstart/docker/nginx</a>
+          href="https://bitbucket.org/mbari/m3-deployspace/src/master/nginx/">https://bitbucket.org/mbari/m3-deployspace/src/master/nginx/</a>
       </details>
     </header>
   </section>
 
   <section id="quicklinks">
     <a href="https://bitbucket.org/account/user/mbari/projects/M3">Bitbucket</a> |
-    <a href="https://github.com/mbari-media-management">GitHub</a> |
-    <a href="https://marineimaging.slack.com/">Slack</a>
+    <a href="https://github.com/mbari-orgt">GitHub</a> |
   </section>
 
-  <section id="index">
-    <h2>Available Content</h2>
-
-    <!-- <h3>Video Annotation and Reference System (VARS)</h3>
-    <div>The VARS applications are available in <a href="apps">apps</a></div> -->
-
-    <!-- <h3>Deep-sea Guide</h3>
-    <div>MBARI's internal Deep-sea guide is at <a href="dsg">dsg</a></div> -->
-
-    <h3>Video</h3>
-    <div>
-      You can browse the video content at "<a href="media">media</a>".
-    </div>
-
-    <h3>Framegrabs</h3>
-    <div>
-      Framegrabs are accessible at <a href="framegrabs">framegrabs</a>
-    </div>
-
-    <h3>M3 REST Endpoints</h3>
+  <section>
+    <h2>Media Access</h2>
     <ul>
-
-      <li>Configuration (raziel):
-        <ul>
-          <li>Endpoint: <a href="config">http://[servername]/config</a></li>
-          <li>Test: <a href="config/health/status">Show health of all M3 services</a></li>
-        </ul>
-      </li>
-
-      <li>Annotations (annosaurus):
-        <ul>
-          <li>Endpoint: <a href="anno">http://[servername]/anno</a></li>
-          <li>Test: <a href="anno/v1/imagedmoments?limit=10">Find a few imaged moments</a></li>
-        </ul>
-      </li>
-
-      <li>Knowledgebase (vars-kb-server):
-        <ul>
-          <li>Endpoint: <a href="kb">http://[servername]/kb</a></li>
-          <li>Test: <a href="kb/v1/phylogeny/up/Nanomia">Show phylogeny branch down to the genus <i>Nanomia</i></a>
-          </li>
-        </ul>
-      </li>
-
-      <li>User Accounts (vars-user-server):
-        <ul>
-          <li>Endpoint: <a href="accounts">http://[servername]/accounts</a></li>
-          <li>Test: <a href="accounts/v1/users">Show all users</a></li>
-        </ul>
-      </li>
-
-      <li>Video Asset manager (vampire-squid):
-        <ul>
-          <li>Endpoint: <a href="vam">http://[servername]/vam</a></li>
-          <li>Test: <a href="vam/v1/videosequences/names">Show all deployment IDs (aka video sequence names)</a>
-          </li>
-        </ul>
-      </li>
-
-      <li>Simple Data Access (Charybdis):
-        <ul>
-          <li>Endpoint: <a href="references">http://[servername]/references</a></li>
-          <li>Test: <a href="references/query/concept/Pandalus">Find all annotations and media for "Pandalus"</a></li>
-          <li>Test: <a href="references/query/dive/Ventana 1234">Show all annotations and media for deployment "Ventana 1234"</a></li>
-          <li>Test: <a href="references/query/file/V4100_20180226T215822Z_prores.mov">Show all annotations for a video file named "V4100_20180226T215822Z_prores.mov"</a></li>
-        </ul>
-      </li>
-
+      <li><a href="media">Browse videos</a></li>
+      <li><a href="framegrabs">Browse framegrabs</a></li>
     </ul>
+  </section>
+
+  <section>
+    <h2>System Status</h2>
+    <div>
+      <ul>
+        <li><a href="/" onclick="javascript:event.target.port=3000">Grafana Data Visualizations</a></li>
+        <li><a href="/" onclick="javascript:event.target.port=9090">Prometheus Dashboard</a></li>
+      </ul>
+    </div>
+  </section>
+
+
+  <section id="index">
+    <h2>M3 Services</h2>
+    <section class="info">
+      <h3><a href="https://github.com/mbari-org/raziel">Raziel</a></h3>
+        <div>Raziel provides service configuration information, such as microservice URLs and access credentials, to VARS Applications. If needed, use <a href="config">http://[this server name]/config</a> as the configuration URL in VARS Annotation and VARS Gridview.</div>
+        <ul>
+          <li><a href="/docs/" onclick="javascript:event.target.port=8400">Swagger docs</a></li>
+          <li><a href="config/health">Service Health</a></li>
+          <li><a href="config/health/status">Health of all M3 services</a></li>
+        </ul>
+      </li>
+    </section>
+
+    <section class="info">
+      <h3><a href="https://github.com/mbari-org/annosaurus">Annosaurus</a></h3>
+      <div>Annosaurus stores and retrieves annotation information. The default endpoint is <a href="anno">http://[this server name/anno</a></div>
+      <ul>
+        <li><a href="/docs/" onclick="javascript:event.target.port=8082">Swagger docs</a></li>
+        <li><a href="anno/v1/health">Service Health</a></li>
+        <li><a href="anno/v1/imagedmoments?limit=10">Find a few imaged moments</a></li>
+      </ul>
+    </section>
+
+    <section class="info">
+      <h3><a href="https://github.com/mbari-org/vampiresquid">Vampire-squid</a></h3>
+      <div>Vampire-squid is a video asset manager that organizes videos by dive or deployment. The default endpoint is <a href="vam">http://[this server name]/vam</a></div>
+      <ul>
+        <li><a href="/docs/" onclick="javascript:event.target.port=8084">Swagger docs</a></li>
+        <li><a href="vam/v1/health">Service Health</a></li>
+        <li><a href="vam/v1/videosequences/names">Show all deployment IDs (aka video sequence names)</a></li>
+      </ul>
+    </section>
+
+    <section class="info">
+      <h3><a href="https://github.com/mbari-org/vars-kb-server">VARS Knowedgebase Server</a></h3>
+      <div>The VARS Knowledgebase server provides access to the taxonomy used by MBARI's annotation systems. The default endpoint is <a href="kb">http://[this server name]/kb</a></div>
+      <ul>
+        <li><a href="kb/v1/health">Service Health</a></li>
+        <li><a href="kb/v1/phylogeny/up/Nanomia">Show phylogeny branch down to the genus <i>Nanomia</i></li>
+      </ul>
+    </section>
+
+    <section class="info">
+      <h3><a href="https://github.com/mbari-org/vars-user-server">VARS User Server</a></h3>
+      <div>The VARS User server manages user accounts and user preferences. The default endpoint is <a href="anno">http://[this server name]/users</a></div>
+      <ul>
+        <li><a href="users/v1/health">Service Health</a></li>
+        <li><a href="users/v1/users">Show all users</a></li>
+      </ul>
+    </section>
+
+    <section class="info">
+      <h3><a href="https://github.com/mbari-org/panoptes">Panoptes</a></h3>
+      <div>Panoptes archives framegrabs from annotation applications</div>
+      <ul>
+        <li><a href="/panoptes/v1/health" onclick="javascript:event.target.port=8500">Service Health</a></li>
+      </ul>
+    </section>
+
+    <section class="info">
+      <h3><a href="https://github.com/mbari-org/beholder">Beholder</a></h3>
+      <div>Beholder extracts on-demand images from video. </div>
+      <ul>
+        <li><a href="/docs" onclick="javascript:event.target.port=8088">Swagger docs</a></li>
+        <li><a href="/health" onclick="javascript:event.target.port=8088">Service Health</a></li>
+      </ul>
+    </section>
+
+
   </section>
 
   <script src=""></script>
