Cleaing up project

--- a/docker/nginx/html/index.html
+++ b/docker/nginx/html/index.html
@@ -83,20 +83,13 @@
     </section>
 
     <section class="info">
-      <h3><a href="https://github.com/mbari-org/vars-kb-server">VARS Knowedgebase Server</a></h3>
-      <div>The VARS Knowledgebase server provides access to the taxonomy used by MBARI's annotation systems. The default endpoint is <a href="kb">http://[this server name]/kb</a></div>
+      <h3><a href="https://github.com/mbari-org/oni">Oni</a></h3>
+      <div>Oni provides access to the taxonomy used by MBARI's annotation systems and also manages user accounts and user preferences.. The default endpoint is <a href="kb">http://[this server name]/oni</a></div>
       <ul>
+        <li><a href="/docs/" onclick="javascript:event.target.port=8083">Swagger docs</a></li>
         <li><a href="kb/v1/health">Service Health</a></li>
         <li><a href="kb/v1/phylogeny/up/Nanomia">Show phylogeny branch down to the genus <i>Nanomia</i></li>
-      </ul>
-    </section>
-
-    <section class="info">
-      <h3><a href="https://github.com/mbari-org/vars-user-server">VARS User Server</a></h3>
-      <div>The VARS User server manages user accounts and user preferences. The default endpoint is <a href="anno">http://[this server name]/users</a></div>
-      <ul>
-        <li><a href="users/v1/health">Service Health</a></li>
-        <li><a href="users/v1/users">Show all users</a></li>
+          <li><a href="kb/v1/users">Show all users</a></li>
       </ul>
     </section>
 
