Updated call to update start timestamp

--- a/docker/nginx/html/index.html
+++ b/docker/nginx/html/index.html
@@ -97,6 +97,7 @@
       <h3><a href="https://github.com/mbari-org/panoptes">Panoptes</a></h3>
       <div>Panoptes archives framegrabs from annotation applications</div>
       <ul>
+        <li><a href="/docs/" onclick="javascript:event.target.port=8085">Swagger docs</a></li>
         <li><a href="/panoptes/v1/health" onclick="javascript:event.target.port=8085">Service Health</a></li>
       </ul>
     </section>
