--- a/docker/nginx/html/index.html
+++ b/docker/nginx/html/index.html
@@ -18,7 +18,7 @@
     <header>
       <h1>Welcome to the MBARI Media Managment (M3) Server</h1>
       <details>This server is running <a href="https://www.nginx.com/">NGINX</a>. It is also acting as a proxy for the
-        REST services hosted on a number of MBARI servers. The source code for the NGINX docker build is located at
+        REST services. The source code for the NGINX docker build is located at
         <a
           href="https://bitbucket.org/mbari/m3-deployspace/src/master/nginx/">https://bitbucket.org/mbari/m3-deployspace/src/master/nginx/</a>
       </details>
