Added kbeditor, updated query and readme

--- a/docker/nginx/html/index.html
+++ b/docker/nginx/html/index.html
@@ -31,6 +31,14 @@
   </section>
 
   <section>
+    <h2>Web Apps</h2>
+    <ul>
+      <li><a href="query">VARS Query</a></li>
+      <li><a href="kbeditor">VARS Knowledge-base Editor</a></li>
+    </ul>
+  </section>
+
+  <section>
     <h2>Media Access</h2>
     <ul>
       <li><a href="media">Browse videos</a></li>
